<resources>
    <string name="app_name">NedoFinder</string>

    <string name="google_maps_key">AIzaSyCRTRORrNpWzMWdmoOrqtt3ThsNMwB3A0I</string>


    <string name="discover">Discover Local\nshops around\nground you</string>
    <string name="explore">Explore unique business, find a\nhidden gems, and support your\ncommunity with wiseh.</string>
    <string name="proximal">Proximal Local\nBusiness Discovery Platform</string>
    <string name="email_address">Email address</string>
    <string name="ali348584_gmail_com">ali348584@gmail.com</string>
    <string name="password">Enter Strong Password</string>
    <string name="pass_hint">* * * * * * * * * * * *</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="log_in_with_google">Log in with google</string>
    <string name="choice">Continue as...</string>
    <string name="find_local">Find local shops or services</string>
    <string name="manage">Manage your business listing</string>
    <string name="owner">Countinue as Owner</string>
    <string name="customer">Countinue as Customer</string>
    <string name="add_shop">1. Add Your Shop</string>
    <string name="shop_photo">Upload Shop Photo</string>
    <string name="shop_name">Shop name(e.g,Kiryana store)</string>
    <string name="shop_category">Shop category(e.g,Grocery, Tailor)</string>
    <string name="owner_s_name">Owner\'s name(e.g,John Doe)</string>
    <string name="set_location">2. Set Location\nand Contact</string>
    <string name="add_shop_location">Add Shop location</string>
    <string name="street_address">Street Address</string>
    <string name="city_area">City/Area</string>
    <string name="phone_number">Phone Number</string>
    <string name="procede_to_finalize">Proceed to Finalize</string>
    <string name="kiryana_storefont">Kiryana StoreFont</string>
    <string name="grocery_tailor">Grocery, Tailor</string>
    <string name="kiryana">Kiryana StoreFont</string>
    <string name="grocery">Grocery, Tailor</string>
    <string name="john_doe">John Doe</string>
    <string name="_0386267526">0386267526</string>
    <string name="lahore_model_town">Lahore/Model Town</string>
    <string name="street_2_9_right_core_of_plaza">street 2.9 right core of plaza</string>
    <string name="approve_for_publishing">Approve for Publishing</string>
    <string name="publish_shop">Publish Shop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_favorite_shops">My Favorite Shops</string>
    <string name="search_nearby_shops_or_services">Search nearby shops or services</string>
    <string name="nedofinder">NedoFinder</string>

    <string-array name="spinner_items">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei Darussalam</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>


    <string-array name="shop_categories">
        <item>Select shop category</item>
        <item>Barber / Salon</item>
        <item>Clothing Store</item>
        <item>Shoe Store</item>
        <item>Grocery Store</item>
        <item>Restaurant / Fast Food</item>
        <item>Mobile Repair</item>
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Pharmacy</item>
        <item>Others</item>
    </string-array>


</resources>