<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey1"
    tools:context=".onboarding.LogInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get Back Your Old Account!"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/blackScreen"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="@dimen/_24ssp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:fontFamily="@font/poppins"
        android:textColor="@color/blackScreen"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingVertical="@dimen/_11sdp"
        android:background="@drawable/edit_back">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/ali348584_gmail_com"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@android:color/transparent"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/poppins"
        android:textColor="@color/blackScreen"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_30sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingVertical="@dimen/_11sdp"
        android:background="@drawable/edit_back">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/pass_hint"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget Password?"
        android:layout_gravity="end"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_30sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_login"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/log_in"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins"
        android:layout_gravity="center"
        android:textColor="@color/grey"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_google"
        android:background="@drawable/edit_back"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_11sdp"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawablePadding="@dimen/_14sdp"
        android:paddingStart="@dimen/_50sdp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/grey"
        app:drawableStartCompat="@drawable/google" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have account? Create new"
        android:textColor="@color/blackScreen"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SignUp"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/blackScreen"
        android:fontFamily="@font/poppins_bold"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>